# kartoza-geoserver-client

./: .dockerignore  .exrc  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  PACKAGES.md  README.md  RELEASE_NOTES.md  SPECIFICATION.md  entrypoint.dev.sh  flake.nix  go.mod  go.sum  main.go  mkdocs.yml  nfpm.yaml  playwright.config.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
apps/: __init__.py
apps/ai/: __init__.py  apps.py  engine.py  urls.py  views.py
apps/bridge/: __init__.py  apps.py  urls.py  views.py
apps/connections/: __init__.py  apps.py  serializers.py  urls.py  views.py
apps/core/: __init__.py  apps.py  config.py  exceptions.py  managers.py  middleware.py  models.py  providers.py  urls.py  utilities.py  views.py
apps/dashboard/: __init__.py  apps.py  urls.py  views.py
apps/geonode/: __init__.py  aaa.html  apps.py  client.py  remote_service.py  urls.py  utilities.py  views.py
apps/geoserver/: __init__.py  apps.py  client.py  urls.py  views.py
apps/geoserver/views/: __init__.py  base.py  coverages.py  coveragestores.py  datastores.py  featuretypes.py  layergroups.py  layers.py  styles.py  uploads.py  workspaces.py
apps/gwc/: __init__.py  apps.py  client.py  urls.py  views.py
apps/iceberg/: __init__.py  apps.py  client.py  urls.py  views.py
apps/mergin/: __init__.py  apps.py  client.py  urls.py  views.py
apps/postgres/: __init__.py  apps.py  client.py  schema.py  service.py  urls.py  views.py
apps/preview/: __init__.py  urls.py  views.py
apps/qfieldcloud/: __init__.py  apps.py  client.py  urls.py  views.py
apps/qgis/: __init__.py  apps.py  urls.py  views.py
apps/query/: __init__.py  apps.py  urls.py  views.py
apps/s3/: __init__.py  apps.py  client.py  duckdb.py  urls.py  views.py
apps/search/: __init__.py  apps.py  services.py  urls.py  views.py
apps/sqlview/: __init__.py  apps.py  urls.py  views.py
apps/sync/: __init__.py  apps.py  services.py  urls.py  views.py
apps/terria/: __init__.py  apps.py  urls.py  viewer_urls.py  views.py
apps/upload/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/upload/migrations/: 0001_initial.py
cloudbench/: __init__.py  asgi.py  manage.py  urls.py  wsgi.py
cloudbench/settings/: __init__.py  base.py  development.py  production.py  testing.py
cmd/: root.go
cmd/migrate/: main.go
cmd/web/: main.go
deployment/: .template.env  Makefile  docker-compose.override.yml  docker-compose.yml
deployment/docker/: Dockerfile  entrypoint.sh  gunicorn.conf.py  requirements.txt
deployment/nginx/sites-enabled/: nginx.conf
docker/iceberg/: docker-compose.yml
docs/: index.md
docs/about/: changelog.md  license.md
docs/admin-guide/: deployment.md  docker.md  environment.md
docs/dev-guide/: api.md  architecture.md  contributing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: geoserver.md  preview.md  tui.md  uploads.md  web-ui.md
flatpak/: com.kartoza.GeoServerClient.yml
internal/api/: client.go  client_test.go  coveragestores.go  datastores.go  downloads.go  featuretypes.go  gwc.go  layergroups.go  layers.go  settings.go  styles.go  types.go  uploads.go  workspaces.go
internal/cache/: cache.go
internal/cloudnative/: cog.go  copc.go  duckdb.go  geoparquet.go  manager.go  types.go
internal/config/: config.go
internal/geonode/: client.go
internal/hosting/: server.go
internal/iceberg/: client.go  types.go
internal/integration/: postgis_store.go  sql_view.go
internal/llm/: errors.go  executor.go  ollama.go  types.go
internal/mergin/: client.go
internal/models/: geoserver.go
internal/ogr2ogr/: import.go  raster.go
internal/postgres/: schema.go  service.go  types.go
internal/preview/: server.go
internal/qfieldcloud/: client.go  client_test.go
internal/query/: builder.go
internal/s3client/: client.go  types.go
internal/sync/: executor.go  sync.go
internal/terria/: catalog.go  server.go
internal/tui/: app.go  app_cache.go  app_crud.go  app_tree.go  app_upload.go
internal/verify/: verify.go
internal/webserver/: handlers_ai.go  handlers_bridge.go  handlers_chunked_upload.go  handlers_connections.go  handlers_dashboard.go  handlers_docs.go  handlers_download.go  handlers_geonode.go  handlers_gwc.go  handlers_hosting.go  handlers_iceberg.go  handlers_import.go  handlers_layers.go  handlers_mergin.go  handlers_postgres.go  handlers_qfieldcloud.go  handlers_qgis.go  handlers_query.go  handlers_s3.go  handlers_s3_buckets.go  handlers_s3_connections.go  handlers_s3_duckdb.go  handlers_s3_objects.go  handlers_s3_preview.go  handlers_s3_types.go  handlers_search.go  handlers_settings.go  handlers_sqlview.go  handlers_stores.go  handlers_styles.go  handlers_sync.go  handlers_terria.go  handlers_upload.go  handlers_workspaces.go  server.go
scripts/: cloudbench-migrate.sh  cloudbench-pg-start.sh  cloudbench-pg-status.sh  cloudbench-pg-stop.sh  cloudbench-psql.sh
snap/: snapcraft.yaml
static/: index.html
static/assets/: deflate-Vi7SXXqo.js  index-Djz7fSsQ.css  jpeg-BmQ5f3G-.js  lerc-Bn9HC4OX.js  lerc-CXBd21nw.js  lerc-Crg9uxYc.js  lerc-Cz_Ccyis.js  lerc-D1W7gF_d.js  lerc-D9fl5L9l.js
tests/: __init__.py  conftest.py  test_config.py
tests/api/: __init__.py  test_connections_api.py  test_core_api.py
tests/e2e/: __init__.py  conftest.py  test_connections.py  test_navigation.py  test_workflows.py
tests/integration/: __init__.py  test_bridge_workflows.py  test_geoserver_workflows.py  test_postgres_workflows.py  test_s3_workflows.py
tests/tui/: __init__.py  test_app.py  test_widgets.py
tests/unit/: __init__.py  test_config.py  test_providers.py
tui/: __init__.py  __main__.py  app.py
tui/screens/: __init__.py  connections.py  geoserver.py  home.py  postgres.py  s3.py  settings.py
tui/styles/: app.tcss
tui/widgets/: __init__.py  progress.py  tree.py
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  theme.ts
web/src/api/: client.ts  (+12 more)
(+278 files in other folders)
