[project]
name = "kartoza-cloudbench"
version = "0.3.0"
description = "Unified management for GeoServer and PostgreSQL/PostGIS - Django backend with Textual TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Kartoza", email = "info@kartoza.com"},
]
keywords = ["geoserver", "postgis", "geospatial", "django", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/kartoza/kartoza-cloudbench"
Documentation = "https://kartoza.github.io/kartoza-cloudbench"
Repository = "https://github.com/kartoza/kartoza-cloudbench"
Issues = "https://github.com/kartoza/kartoza-cloudbench/issues"

[project.scripts]
cloudbench = "cloudbench.manage:main"
cloudbench-tui = "tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudbench", "apps", "tui"]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",  # Parallel test execution
    "pytest-timeout>=2.3",  # Test timeouts
    "pytest-mock>=3.14",  # Mocking utilities
    "httpx>=0.27",  # For async API testing
    "factory-boy>=3.3",  # Test factories
    "faker>=25.0",  # Fake data generation
    "responses>=0.25",  # Mock HTTP responses
    "textual-dev>=1.5",  # Textual testing utilities
    # Code quality
    "black>=24.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "django-stubs>=5.0",
    "types-requests>=2.31",
    "types-boto3>=1.0",
    # E2E testing
    "playwright>=1.44",
    "pytest-playwright>=0.5",
]

[project.dependencies]
# Django core
django = ">=5.0"
djangorestframework = ">=3.15"
django-cors-headers = ">=4.3"
whitenoise = ">=6.6"

# Async HTTP client
httpx = ">=0.27"

# Database
psycopg = { version = ">=3.1", extras = ["binary"] }

# S3 client
boto3 = ">=1.34"

# Parquet/GeoParquet queries
duckdb = ">=1.0"

# XML parsing for GeoServer REST API
lxml = ">=5.2"

# Data validation
pydantic = ">=2.7"

# ASGI server
uvicorn = { version = ">=0.29", extras = ["standard"] }

# WSGI server
gunicorn = ">=22.0"

# TUI framework
textual = ">=0.79"
rich = ">=13.7"
click = ">=8.1"

# UUID generation
uuid7 = ">=0.1"


[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Within an except clause, raise from the caught exception
]

[tool.ruff.lint.isort]
known-first-party = ["cloudbench", "apps", "tui"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [
    "migrations/",
    ".venv/",
]

[tool.django-stubs]
django_settings_module = "cloudbench.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cloudbench.settings.testing"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (browser-based, slow)",
    "slow: Slow tests (skip with -m 'not slow')",
    "api: API endpoint tests",
    "tui: TUI tests",
    "frontend: Frontend component tests",
]

[tool.coverage.run]
source = ["apps", "cloudbench", "tui"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true
